--- a/M2/package.json
+++ b/M2/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "nunjucks": "^3.1.3"
+    "nunjucks": "^3.1.3",
+    "sequelize": "^4.38.0"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
