npm install sequelize-cli -D

--- a/M2/package.json
+++ b/M2/package.json
@@ -20,6 +20,7 @@
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.13.0",
-    "nodemon": "^1.0.6"
+    "nodemon": "^1.0.6",
+    "sequelize-cli": "^4.0.0"
   }
 }
