node_modules/.bin/sequelize migration:create --name=create-users

--- a/M2/.sequelizerc
+++ b/M2/.sequelizerc
@@ -4,5 +4,5 @@ module.exports = {
   'config': path.resolve('config', 'database.js'),
   'models-path': path.resolve('app', 'models'),
   'seeders-path': path.resolve('database', 'seeders'),
-  'migration-path': path.resolve('database', 'migration'),
+  'migrations-path': path.resolve('database', 'migrations'),
 };
